--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://danielvanstrien.xyz/404.html" />
 <meta property="og:site_name" content="Daniel van Strien" />
 <script type="application/ld+json">
-{"url":"https://danielvanstrien.xyz/404.html","@type":"WebPage","headline":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
+{"description":"digital collections + computational methods","url":"https://danielvanstrien.xyz/404.html","@type":"WebPage","headline":"Daniel van Strien","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
