deploy: 8a50c77e80a50de998f3f33472f8dce9bf95c95b

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://danielvanstrien.xyz/" />
 <meta property="og:site_name" content="Daniel van Strien" />
 <script type="application/ld+json">
-{"description":"digital collections + computational methods","url":"https://danielvanstrien.xyz/","@type":"WebSite","headline":"Daniel van Strien","name":"Daniel van Strien","@context":"https://schema.org"}</script>
+{"headline":"Daniel van Strien","url":"https://danielvanstrien.xyz/","@type":"WebSite","name":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
