--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://danielvanstrien.xyz/search/" />
 <meta property="og:site_name" content="Daniel van Strien" />
 <script type="application/ld+json">
-{"description":"digital collections + computational methods","url":"https://danielvanstrien.xyz/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
+{"headline":"Search","url":"https://danielvanstrien.xyz/search/","@type":"WebPage","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
