--- a/projects/index.html
+++ b/projects/index.html
@@ -235,7 +235,7 @@ https://huggingface.co/spaces https://huggingface.co/spaces/BritishLibraryLabs/B
 
 <ul>
   <li><a href="https://living-with-machines.github.io/genre-classification/intro.html">Jupyter book showing how to build an ML powered book genre classifier</a></li>
-  <li><a href="https://living-with-machines.github.io/nnanno/intro.html">Working with digitised historic materials at scale poses some challenges. This series of notebooks is intended to give a rough overview of some of the considerations involved</a></li>
+  <li><a href="https://living-with-machines.github.io/nnanno/intro.html">A (brief) history of advertising in US Newspapers using computer vision</a></li>
 </ul>
 
 <h1 id="code">
