deploy: ea437b0611c0f017804032934bd893745f96d558

--- a/projects/index.html
+++ b/projects/index.html
@@ -236,6 +236,10 @@ https://huggingface.co/spaces https://huggingface.co/spaces/BritishLibraryLabs/B
 <ul>
   <li><a href="https://living-with-machines.github.io/genre-classification/intro.html">Jupyter book showing how to build an ML powered book genre classifier</a></li>
   <li><a href="https://living-with-machines.github.io/nnanno/intro.html">A (brief) history of advertising in US Newspapers using computer vision</a></li>
+  <li>(<strong>Under review</strong>)  <a href="https://github.com/programminghistorian/ph-submissions/issues/343">Computer Vision for the Humanities: An Introduction to Deep Learning for Image Classification, Programming Historian lessons</a>
+</li>
+  <li>(<strong>Under development</strong>) <a href="https://carpentries-incubator.github.io/machine-learning-librarians-archivists/index.html">Intro to AI for GLAM, Carpentries Lesson</a>
+</li>
 </ul>
 
 <h1 id="code">
