--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://danielvanstrien.xyz/about/" />
 <meta property="og:site_name" content="Daniel van Strien" />
 <script type="application/ld+json">
-{"headline":"About Me","url":"https://danielvanstrien.xyz/about/","@type":"WebSite","name":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
+{"url":"https://danielvanstrien.xyz/about/","@type":"WebSite","headline":"About Me","name":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
