--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Daniel van Strien" />
 <link rel="next" href="https://danielvanstrien.xyz/page2/" />
 <script type="application/ld+json">
-{"headline":"Daniel van Strien","url":"https://danielvanstrien.xyz/","@type":"WebSite","name":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
+{"url":"https://danielvanstrien.xyz/","@type":"WebSite","headline":"Daniel van Strien","name":"Daniel van Strien","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
