deploy: 66b5fe8886ed712b575ac9843c94e910acbc0cfd

--- a/projects/index.html
+++ b/projects/index.html
@@ -228,6 +228,7 @@ https://huggingface.co/spaces https://huggingface.co/spaces/BritishLibraryLabs/B
   <li><a href="https://github.com/Living-with-machines/Computer-Vision-for-the-Humanities-workshop">Computer Vision for the Humanities workshop</a></li>
   <li><a href="https://github.com/Living-with-machines/maps-at-scale-using-computer-vision-and-jupyter-notebooks">Working with maps at scale using Computer Vision and Jupyter notebooks</a></li>
   <li><a href="https://github.com/Living-with-machines/Jupyter-Notebooks-The-Weird-and-Wonderful">Introduction to Jupyter Notebooks: the weird and the wonderful</a></li>
+  <li><a href="https://github.com/Living-with-machines/image-search">Image Search</a></li>
 </ul>
 
 <h2 id="tutorials">
