--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://danielvanstrien.xyz/projects/" />
 <meta property="og:site_name" content="Daniel van Strien" />
 <script type="application/ld+json">
-{"url":"https://danielvanstrien.xyz/projects/","@type":"WebPage","headline":"Selected projects","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
+{"url":"https://danielvanstrien.xyz/projects/","headline":"Selected projects","@type":"WebPage","description":"digital collections + computational methods","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://danielvanstrien.xyz/feed.xml" title="Daniel van Strien" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
