deploy: 32ed5084866ed4450106c9c509746df0aa7d185c

--- a/about/index.html
+++ b/about/index.html
@@ -110,10 +110,13 @@ window.onload = wrap_img;
 
 <p>Some projects I am/have been involved in:</p>
 
-<p><a href="https://huggingface.co/biglam">BigLAM</a>: an initiative to make GLAM datasets with machine learning datasets more widely available. 
-<a href="https://ai4lam.org/">ai4lam</a>:  an international, participatory community focused on advancing the use of artificial intelligence in, for and by libraries, archives and museums. 
-<a href="https://livingwithmachines.ac.uk/">LivingwithMachines</a>. 
-You can find more projects <a href="https://danielvanstrien.xyz/projects/">here</a>.</p>
+<ul>
+  <li><a href="https://huggingface.co/biglam">BigLAM</a>: an initiative to make GLAM datasets with machine learning datasets more widely available.</li>
+  <li><a href="https://ai4lam.org/">ai4lam</a>: an international, participatory community focused on advancing the use of artificial intelligence in, for and by libraries, archives and museums.</li>
+  <li><a href="https://livingwithmachines.ac.uk/">LivingwithMachines</a> a research collobaration between the <a href="https://www.bl.uk/">British Library</a> and the <a href="https://www.turing.ac.uk/">Alan Turing Institute</a> focused on applying data science and machine learning methods to digitised historical collections.</li>
+</ul>
+
+<p>You can find more projects <a href="https://danielvanstrien.xyz/projects/">here</a>.</p>
 
 <p>You can find me on the <a href="https://huggingface.co/davanstrien">Hugging Face Hub</a>, 
 <a href="https://uk.linkedin.com/in/danielvanstrien">Linkedin</a>, <a href="https://twitter.com/vanstriendaniel">Twitter</a> and <a href="https://elk.zone/sigmoid.social/@danielvanstrien">Mastodon</a></p>
