--- a/about/index.html
+++ b/about/index.html
@@ -113,7 +113,7 @@ window.onload = wrap_img;
 <ul>
   <li><a href="https://huggingface.co/biglam">BigLAM</a>: an initiative to make GLAM datasets with machine learning datasets more widely available.</li>
   <li><a href="https://ai4lam.org/">ai4lam</a>: an international, participatory community focused on advancing the use of artificial intelligence in, for and by libraries, archives and museums.</li>
-  <li><a href="https://livingwithmachines.ac.uk/">LivingwithMachines</a> a research collobaration between the <a href="https://www.bl.uk/">British Library</a> and the <a href="https://www.turing.ac.uk/">Alan Turing Institute</a> focused on applying data science and machine learning methods to digitised historical collections.</li>
+  <li><a href="https://livingwithmachines.ac.uk/">LivingwithMachines</a>: a research collobaration between the <a href="https://www.bl.uk/">British Library</a> and the <a href="https://www.turing.ac.uk/">Alan Turing Institute</a> focused on applying data science and machine learning methods to digitised historical collections.</li>
 </ul>
 
 <p>You can find more projects <a href="https://danielvanstrien.xyz/projects/">here</a>.</p>
